# Camelid

./: .gitignore  ARCHITECTURE.md  ATTENTION_CHECKPOINTS.md  AUDIT_EVENTS.md  BACKEND_ASKS.md  BASALT_CONDUCTOR.md  BASALT_RECON.md  BENCHMARKS.md  BENCHMARKS_v0.1.md  CAPABILITY_MATRIX.md  CLUSTER_BENCH.md  COMPATIBILITY.md  CONTEXT.md  CONTRIBUTING.md  CORRECTNESS_v0.1.md  Cargo.toml  DECISIONS.md  DISTRIBUTED_MAC_v0.1.md  DISTRIBUTED_RECON.md  DOCS.md  DROVER_RECON.md  FORGELOCAL_INTEGRATION.md  FULL_SUPPORT_BLOCKER_MATRIX.md  INFERENCE_RECON.md  LLAMA_CPP_BASELINE_v0.1.md  MARKET_POSITIONING_v0.1.md  MLX_BASELINE_v0.1.md  MUSTER_ACQUISITION.md  MUSTER_CONDUCTOR.md  MUSTER_RECON.md  MUSTER_ROSTER.md  OLLAMA_BASELINE_v0.1.md  ORNITH9B_RECON.md  PARITY.md  Q5_K_M_PLAN.md  QA_LLAMA32_3B_Q8_ACCEPTANCE.md  QA_SMALL_MODEL_PARITY_MATRIX.md  README.md  RECEIPTS.md  RECON_AGENT.md  (+25 more)
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
assets/: DEMO_RECORDING.md
camelid-desktop/: .gitignore  Cargo.toml  README.md  tauri.bundle.conf.json  tauri.conf.json
camelid-desktop/capabilities/: default.json
camelid-desktop/icons/: icon.icns
camelid-desktop/splash/: index.html
camelid-desktop/src/: engine.rs  main.rs
docs/: CONFIGURATION.md  CONFORMANCE.md  CONTEXT.md  CONTRIBUTOR_QUICKSTART.md  TELEMETRY.md  VALIDATION_MATRIX.md  WAR_ROOM_EVIDENCE_INDEX.md  gemma4-cuda-port-plan.md  gemma4-cuda-q4_0-plan.md  gemma4-gpu-port-plan.md  gemma4-row-audit-2026-06-09.md  gemma4-two-mac-cluster.md
docs/adr/: 0001-agentic-engineering-discipline.md
docs/architecture/: IQUANT_IQ4XS_PLAN.md  MODEL_FIT_ADVISOR_PLAN.md  NVFP4_FORMAT.md  SAFETENSORS_PLAN.md  STRUCTURED_OUTPUTS.md  WEB_AGENT_WORKSPACE_PLAN.md  WORKSPACE_CLI.md  WORKSPACE_MEMORY_SPEC.md
docs/benchmarks/: BENCHMARKS.md  PARITY.md  camelid-distributed.md  camelid-vs-mlx.md
docs/perf-deep-dive/: BARCHAN_PHASE1_COST_CURVE.md  BARCHAN_PIN.md  BENCHMARK_TREATY.md  CAMELID_HOTSPOTS.md  KQUANT_RECON.md  LANE_STATUS_LEDGER.md  LLAMA_CPP_ARCHAEOLOGY.md  METAL_PARITY_PLAN.md  METAL_PARITY_RESULT.md  METAL_RECON.md  METAL_ROOFLINE.md  PERF_GAP_REPORT.md  PHASE6_CUDA_STREAMS_PLAN.md  README.md  REFACTOR_NOTES.md  SPEED_FIX_PLAN.md  STAMPEDE_CONDUCTOR.md  VELOCITY_CAMPAIGN.md  WIN2METAL_A2_REACHABILITY.md  WIN2METAL_PHASE3_PLAN.md  WIN2METAL_PHASE4_PLAN.md  WIN2METAL_RECON.md
docs/performance/: gemma4-qat-gpu-2026-06-11.md  gemma4-spec-decode-2026-06-11.md  perf-findings-2026-06-11.md  ubuntu-x86-q8-progress-20260515.md  ubuntu-x86-q8.md
docs/recon/: DIFFUSIONGEMMA_26B_A4B_RECON.md  DIFFUSIONGEMMA_RECON.md  ENGINE_INVERSION_CONDUCTOR.md  ENGINE_INVERSION_PHASE5_MULTISLOT_RECON.md  ENGINE_INVERSION_R1_LANE_RECON.md  GEMMA4_26B_A4B_QAT_RECON.md  qwen3-1.7b-q8.md
docs/release/: CORRECTNESS_v0.1.md
docs/runtime/: cross-lane-sync.md  ghost-mode.md
examples/: dump_camelid_layer0.rs  parity_node.rs
fixtures/: README.md
fixtures/tokenizer/: mistral-7b-instruct-v0.2-reference-pack.template.json  tinyllama-chat-template-edge-cases.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/design-evidence/: BACKEND_ASKS.md  BASELINE.md  DESIGN_LOG.md
frontend/scripts/: capability-readiness-smoke.mjs  capture-views.mjs  catalog-activation-smoke.mjs  (+20 more)
ledger/: camelid-ledger.json  camelid-ledger.schema.json
qa/: cpu-bench.ps1  invariant_lanes.json  invariant_lanes.schema.json
qa/hardpan/input-probe/: .gitignore  Cargo.toml
qa/hardpan/input-probe/src/: main.rs
scripts/: assemble-workspace-evidence.mjs  audit-evidence-bundle-privacy.mjs  bench-cuda-streams-matrix.sh  bench-dense-hotloops.mjs  bench-generation-prompts.mjs  bench-llama3-same-host.mjs  bench-q8-hotpath-bundle.mjs  bench-qwen3-cuda-resident.mjs  bench-unique-chat.mjs  build-gemma4-context-bundle.mjs  build-gemma4-evidence-bundle.mjs  build-mac.sh  chat-parity-gemma3.mjs  chat-parity-llama3.mjs  chat-parity-mistral.mjs  chat-parity-mixtral.mjs  chat-parity-phi3.mjs  chat-parity-qwen3-kquant.mjs  chat-parity-qwen3-twophase.mjs  chat-parity-qwen3.mjs  chat-parity-tinyllama.mjs  chat-terminal-smoke.sh  check-attention-checkpoints.mjs  check-cuda-prefill-parity-gate.mjs  check-forward-trace-invariants.mjs  check-ledger-drift.mjs  check-ledger-schema.mjs  check-output-projection-layout.mjs  check-public-evidence-claims.mjs  check-public-scrub.sh  compare-attention-checkpoints.mjs  compare-dense-checkpoints.mjs  compare-dense-stage-flow.mjs  compare-forward-traces.mjs  compare-tensor-dumps.mjs  correlate-prompt-token-rows.mjs  dg-chat-oracle.cpp  dg-decode-parity.sh  dg-dequant-dump.cpp  dg-eb-loop.cpp  (+66 more)
src/: alloc_gate.rs  capability.rs  catalog.rs  cluster.rs  cuda.rs  cuda_parity.rs  cuda_resident.rs  cuda_vram.rs  dg_argsort.cpp  diffusion_gemma.rs  distributed.rs  error.rs  execution_plan.rs  fit.rs  fit_dims.rs  gemma4_distributed.rs  gemma4_runtime.rs  ghost.rs  grammar.rs  hf_browse.rs  inference.rs  lib.rs  main.rs  metal.rs  model.rs  model_source.rs  offload.rs  platform_fs.rs  telemetry.rs  verify.rs  web_ui.rs  wire_mmap.rs  workspace_auth.rs  x86_amx_q8.c
tests/: api_vertical_slice.rs  cuda_contention.rs  cuda_cpu_parity.rs  deterministic_forward.rs  dg_block1_logit_ladder.rs  dg_block1_step3_probe.rs  dg_chat_parity.rs  dg_decode_parity.rs  dg_eb_loop_parity.rs  dg_encoder_parity.rs  dg_mc_block0_diag.rs  dg_mc_loop_parity.rs  dg_quant_parity.rs  dg_tokenizer_parity.rs  distributed_llama_loopback_parity.rs  distributed_llama_parity.rs  distributed_tests.rs  execution_trace.rs  execution_trace_receipt.rs  gemma4_api_smoke.rs  gemma4_binding.rs  gemma4_capabilities.rs  gemma4_distributed_parity.rs  gemma4_forward.rs  gemma4_generation_parity.rs  gemma4_kquant_regression.rs  gemma4_load.rs  gemma4_logit_probe.rs  gemma4_metadata.rs  gemma4_spec_decode_parity.rs  gemma4_template_shapes.rs  gemma4_vless_gpu.rs  gguf_metadata.rs  inference_session.rs  invariant_matrix_binding.rs  model_binding.rs  nvfp4_e4b_spotcheck.rs  nvfp4_format.rs  nvfp4_wire_lane_refusals.rs  phi3_smoke.rs  (+13 more)
(+1441 files in other folders)
