[package]
name = "camelid-desktop"
version = "0.1.8"
edition = "2021"
rust-version = "1.89"
description = "Camelid Desktop — additive native Windows chat app that embeds the camelid engine as a loopback sidecar"
license = "MIT"
repository = "https://github.com/timtoole02/Camelid"
# Never published to crates.io; it is shipped only as a bundled Windows artifact.
publish = false

[[bin]]
name = "camelid-desktop"
path = "src/main.rs"

[build-dependencies]
# Embeds the splash assets + Windows icon resource and validates tauri.conf.json.
tauri-build = { version = "2", features = [] }

[dependencies]
# WebView2-hosted shell. No extra features for v1: the window simply navigates to the
# sidecar's already-embedded UI, so we need neither the HTTP plugin nor remote IPC.
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
# Job object with KILL_ON_JOB_CLOSE: ties the sidecar's lifetime to ours so a desktop
# crash cannot orphan a `camelid` process. Same major as the server crate uses (0.59).
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
